# privacy-protection-messenger-qt

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  call_backend.hpp  index.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  palette.xml  privacy-protection-messenger-qt.desktop  privacy-protection-messenger-qt_ru_RU.ts  privacy-protection-messenger-qt_ru_UA.ts  privacy-protection-messenger-qt_uk_UA.ts  privacy-protection-messenger.desktop  resources.qrc
